@@ -102,4 +102,7 @@ private:
     DECLARE_DYNAMIC_CLASS(wxControl)
 };
 
+// Fix sensitivity due to bug in GTK+ < 2.14
+void wxGtkFixSensitivity(wxWindow* ctrl);
+
 #endif // _WX_GTK_CONTROL_H_
