@@ -249,10 +249,15 @@ void wxButton::SetLabel( const wxString &lbl )
 
 bool wxButton::Enable( bool enable )
 {
+    bool isEnabled = IsEnabled();
+
     if ( !wxControl::Enable( enable ) )
         return false;
 
     gtk_widget_set_sensitive(GTK_BIN(m_widget)->child, enable);
+
+    if (!isEnabled && enable)
+        wxGtkFixSensitivity(this);
 
     return true;
 }
